# sos-generator

./: .gitignore  DualPlaneGeometry.ipynb  GeometrySimpy.ipynb  LICENCE  README.md  Untitled.ipynb  Untitled1.ipynb  dualizeAnOrient.txt  index.py  indexSnoeyink.py  methods.py  output.order.txt  output.txt  outputDualize.txt  outputParam.txt  paramAndOrder.txt  schemes.py  substitution.py  testPointOrientationAll.py  testSegmentOrderAll.py  testSegmentOrderYapL.py  yap.py
.ipynb_checkpoints/: GeometrySimpy-checkpoint.ipynb
output/: output.dualize.py
projective-duality-visualisation/: DualPlaneGeometry.ipynb
real-world-data-evaluation/: CMakeLists.txt  README.md
real-world-data-evaluation/src/: CGALTypedefs.h  main.cpp
real_world_data_evaluation/: .gitignore  build.sh
real_world_data_evaluation/src/: Data.h  Timer.h
robustness-standalone/: .clang-format  .gitignore  README.md  TODO.md  ouput.txt
robustness-standalone/data/: three-sheet-toy.txt  vertex-neighbourhood-7-vertices.vtu
robustness-standalone/src/: Data.cpp  main.cpp
synthetic_data_evaluation/: geometry.py  stats.py  testPointOrientation.py  testPointOrientationAll.py  testSegmentOrder.py  testSegmentOrderAll.py
table-generation/: index.py  sos.py  testPointOrientationAll.py  testSegmentOrderAll.py  testSegmentOrderSoS.py  testSegmentOrderYapT.py
table_generation/: allienz.py  alliez.py  indexSnoeyink.py  methods.py  predicates.py  printAlliezTables.py  printPointOrientationTables.py  printSegmentOrderTables.py  schemes.py  sos.py  utility.py  yap.py
